[gd_scene load_steps=7 format=3 uid="uid://c8b3u33lh2i0w"]

[ext_resource type="Script" path="res://Flappy Bird/Juego.gd" id="1_jq72m"]
[ext_resource type="Texture2D" uid="uid://dle7aehm2fse6" path="res://sprites/Mobile - Flappy Bird - General Sprites.png" id="1_qfpoc"]
[ext_resource type="PackedScene" uid="uid://bk10l3kvk5gjs" path="res://Jugador/Jugador.tscn" id="3_bh8kr"]
[ext_resource type="PackedScene" uid="uid://ba4fw7ad47dsc" path="res://Tubos/Tubos.tscn" id="4_5p072"]
[ext_resource type="PackedScene" uid="uid://ck7ad7ieeq6qr" path="res://Hud/Hud.tscn" id="5_aqa2w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31err"]
size = Vector2(154, 55)

[node name="Juego" type="Node2D" groups=["juego"]]
process_mode = 1
script = ExtResource("1_jq72m")
tubos = ExtResource("4_5p072")

[node name="Jugador" parent="." instance=ExtResource("3_bh8kr")]
position = Vector2(34, 70)

[node name="Timer" type="Timer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(144, 0)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(72, 128)
texture = ExtResource("1_qfpoc")
region_enabled = true
region_rect = Rect2(0, 0, 144, 256)

[node name="SpawnTubos" type="ParallaxBackground" parent="."]

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(0, 210)
motion_mirroring = Vector2(154, 0)
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2(-359, -278)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer/Area2D"]
position = Vector2(436, 306.5)
scale = Vector2(1, 1.01786)
texture = ExtResource("1_qfpoc")
region_enabled = true
region_rect = Rect2(146, 0, 154, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground2/ParallaxLayer/Area2D"]
position = Vector2(436, 307)
shape = SubResource("RectangleShape2D_31err")

[node name="Hud" parent="." groups=["hud"] instance=ExtResource("5_aqa2w")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="ParallaxBackground2/ParallaxLayer/Area2D" to="." method="_on_area_2d_body_entered"]
